Fix the spacing between the links so it looks better for mobile in landscape view

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -72,5 +72,6 @@
   
   .menu {
     margin: 15px;
+    margin-left: 30px;
   }
 }
